Added support for second-level cache
